--- a/index.html
+++ b/index.html
@@ -48,5 +48,19 @@
             </td>
         </tr>
     </table>
+    <table class="information">
+        <tr>
+            <td>
+                <img src="img/pic-01.png" alt="pic-01">
+                <h3>Как стать волонтером?</h3>
+                <p> Прежде всего, необходимо узнать кто такой «волонтер». Это тот кто действует по свободной воле. Сам захотел, и сам выбрал что делать. Ресурс волонтера — его личное время, его личные силы, умения и навыки</p>
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
 </body>
 </html>
